# gaussian-splatting

./: .gitignore  LICENSE  README.md  pyproject.toml
gaussian_splatting/: config.py  main.py
gaussian_splatting/rasterizer/: __init__.py  bindings.cpp  forward.cu
gaussian_splatting/utils/: gaussian.py
src/gaussian_splatting/: main.py
src/gaussian_splatting/rasterizer/: __init__.py  forward.cu  helpers.h  rasterizer.cu
src/gaussian_splatting/utils/: dataset.py  gaussian.py
src/utils/: dataset.py  gaussian.py
tests/: conftest.py
tests/perf/: ncu_with_data.sh  profile_forward.py  profile_forward_with_data.py  run_ncu.sh
