[project]
name = "gaussian-splatting"
version = "0.1.0"
description = "Minimal implementation of 3DGS"
authors = [
    {name = "Alex Katopodis"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "~3.12"
dependencies = [
    "torch ~=2.10.0",
    "pycolmap ~=3.13.0",
    "pillow ~= 12.1.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
